<resources>
    <string name="app_name">MyEyes</string>
    <string name="company_name">TeamRocket.inc</string>
    <string name="copywrite">Copywrite 2016</string>
    <string name="short_bio_1">The TeamRocket.inc is company made by 4 developers:</string>
    <string name="short_bio_2">George,Alkis,Ananias and Peter.</string>
    <string name="short_bio_3">The company is trying to solve problems for people with disabilities.</string>
    <string name="donation">To support our work, please donate:teamrocket@info.com</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="presstart">Press start to begin monitoring sensors</string>
    <string name="areyousure">Are you sure you want to exit?</string>
    <string name="manual">manual</string>
    <string name="workingonline">you are working online</string>


</resources>
