<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alkiviadis.application1.AboutActivity"
    android:background="@android:color/black">

    <TextView
        android:text="@string/copywrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="23dp"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:text="@string/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/textView"
        android:textSize="36sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="@string/short_bio_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/textView5"
        android:layout_marginEnd="23dp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginTop="22dp" />

    <TextView
        android:text="@string/short_bio_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/textView4"
        android:layout_marginEnd="23dp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginRight="20dp" />

    <TextView
        android:text="@string/short_bio_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/textView3"
        android:layout_marginEnd="23dp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView4" />

    <TextView
        android:text="@string/donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/textView6"
        android:layout_marginEnd="23dp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@+id/textView5"
        android:layout_alignRight="@+id/textView5"
        android:layout_marginTop="35dp" />

</RelativeLayout>
