<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alkiviadis.application1.MainActivity"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        tools:background="@android:color/holo_blue_light"
        android:id="@+id/proxval"
        android:layout_height="wrap_content"
        android:hint="Proximity Sensor Values"
        android:layout_alignStart="@+id/accelval"
        android:layout_marginTop="20dp"
        tools:text="Proximity Sen Values" />

    <TextView
        android:text="@string/presstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textviewStatistics"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:background="@android:color/background_dark"
        tools:textColor="@android:color/holo_blue_dark"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        style="@android:style/Widget.Holo.Light.TextView"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/buttonSwitch"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="577dp" />

    <TextView
        android:layout_width="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        tools:background="@android:color/holo_blue_light"

        android:id="@+id/accelval"
        android:layout_height="wrap_content"
        android:hint="Accel Sensor Values"
        tools:text="Accel Sensor values"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonManualAutomatic"
        android:textStyle="normal|bold|italic"
        tools:background="@android:color/holo_green_dark"
        android:background="@android:color/holo_green_dark"
        android:layout_marginTop="17dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/workingonline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonOnlineOffline"
        android:textStyle="normal|bold|italic"
        tools:background="@android:color/holo_green_dark"
        android:background="@android:color/holo_green_dark"
        android:layout_below="@+id/buttonManualAutomatic"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSwitch"
        android:textStyle="normal|bold|italic"
        tools:background="@android:color/holo_green_dark"
        android:background="@android:color/holo_green_dark"
        android:layout_below="@+id/buttonOnlineOffline"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
